tests/ui/macros/mbe-parenthesis-ident-error.stderr
error: expected identifier, found `(`
  --> $DIR/mbe-parenthesis-ident-error.rs:3:14
   |
LL | macro_rules! (meepmeep) {
   |              ^ expected identifier
   |
help: try removing the parenthesis around the name for this `macro_rules!`
   |
LL | macro_rules! meepmeep {
   |              ~~~~~~~~

error: aborting due to 1 previous error

